# amazon-braket-examples

./: .gitattributes  .gitignore  .readthedocs.yml  ALTERNATIVE_ORGANIZATION.md  CODEOWNERS  CONTRIBUTING.md  NOTICE  README.md  TESTING.md  buildspec.yml  codebuild_build.sh  convert_timings.py  environment.yml  pyproject.toml  requirements-cuda.txt  requirements-extra.txt  requirements.txt  setup.cfg  setup.py  timing_report.py  tox.ini
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: cache-cleanup.yml  check-format.yml  code-freeze.yml  codescan-build.yml  conda-build.yml  python-package.yml
0_TO_ORGANIZE/Noise_models/: Noise_models_on_Amazon_Braket.ipynb
advanced_circuits_algorithms/Grover/: Grover.html  Grover.ipynb
advanced_circuits_algorithms/QAA/: QAA_tutorial.ipynb  utils_circuit.py  utils_qaa.py
advanced_circuits_algorithms/QFT/: QFT.html  QFT.ipynb
advanced_circuits_algorithms/QPE/: QPE.ipynb  QPE_imports.html  QPE_imports.ipynb  utils_qft.py  utils_qpe.py
braket_features/: Allocating_Qubits_on_QPU_Devices.ipynb  Getting a device and checking device properties.ipynb  Getting devices and checking device properties.ipynb  Getting_Devices_and_Checking_Device_Properties.ipynb  Using_the_tensor_network_simulator_TN1.ipynb
braket_features/Getting_notifications_when_a_task_completes.ipynb/: Getting_notifications_when_a_task_completes.ipynb
docs/: .jupyterlite.doit.db  ENTRIES.json  FRONTMATTER.md  INSTRUCTIONS.md  _ENDMATTER.md  _FRONTMATTER.md  _INDEX.md  _NOTEBOOKS.md  _build_body.py  _build_index.py  build-environment.yml  build_body.py  build_index.py  build_readme.sh  categories.json  conf.py  environment.yml  index.md  index.rst  index_terms.json
docs/contents/: pathways
examples/advanced_circuits_algorithms/: Violation_of_Bells_Inequality.ipynb
examples/analog_hamiltonian_simulation/: 00_Introduction_of_Analog_Hamiltonian_Simulation_with_Rydberg_Atoms.ipynb  00_Introduction_of_Analog_Hamiltonian_Simulation_with_Rydberg_Atoms_backup.ipynb  00_Introduction_of_Rydberg_physics.ipynb  01_AHS-basic-usage.ipynb  01_Introduction_to_Aquila.ipynb  01_Introduction_to_Aquila_v2.ipynb  02_Ordered_phases_in_Rydberg_systems-Copy1.ipynb  02_Ordered_phases_in_Rydberg_systems-Copy2.ipynb  02_Ordered_phases_in_Rydberg_systems.ipynb  03_Parallel_Jobs_on_Aquila.ipynb  03_Parallel_tasks_on_Aquila.ipynb  03_Solving_Maximum_Independent_Set_with_Rydberg_Atoms.ipynb  04_Maximum_Independent_Sets_with_Analog_Hamiltonian_Simulation.ipynb  04_Running_Analog_Hamiltonian_Simulation_with_local_simulator.ipynb  04_Simulating_Lattice_Gauge_Theory_with_Rydberg_Atoms.ipynb  05_Running_Analog_Hamiltonian_Simulation_with_local_simulator.ipynb  06_Analog_Hamiltonian_simulation_with_PennyLane.ipynb  06_Simulating_Lattice_Gauge_Theory_with_Rydberg_Atoms.ipynb  06_Solving_SAT_with_Differential_programming.ipynb  07_Maximum_Weight_Independent_Set.ipynb  07_Simulating_Lattice_Gauge_Theory_with_Rydberg_Atoms.ipynb  08_Maximum_Weight_Independent_Set.ipynb  09_Noisy_quantum_dynamics_for_Rydberg_atom_arrays.ipynb  09_Noisy_quantum_evolution_of_Bell_states.ipynb  LGT.ipynb  MWIS.ipynb  Ordered_phases_in_Rydberg_systems.ipynb  Phase_transition_Rydberg_systems.ipynb  README.md  ahs_utils.py  utils.py
examples/braket_QPUs/: Bernstein_Vazirani.ipynb
examples/braket_features/: Allocating_Qubits_on_QPU_Devices.ipynb  Allocating_Qubits_on_Rigetti_QPU_Devices.ipynb  Error_Mitigation_on_Amazon_Braket.ipynb  Getting_Devices_and_Checking_Device_Properties.ipynb  Getting_Started_with_OpenQASM_on_Braket.ipynb  IQM_Garnet_Native_Gates.ipynb  IonQ_Native_Gates.ipynb  Local_Emulation_for_Verbatim_Circuits_on_Amazon_Braket.ipynb  Local_Emulator.ipynb  Native_gates_on_IonQ.ipynb  Randomness_Generation.ipynb  Simulating_Advanced_OpenQASM_Programs_with_the_Local_Simulator.ipynb  Simulating_Noise_On_Amazon_Braket.ipynb  Spending_Limits_Introduction.ipynb  TN1_demo_local_vs_non-local_random_circuits.ipynb  Using_Barrier_Statement_on_Braket.ipynb  Using_The_Adjoint_Gradient_Result_Type.ipynb  Using_the_experimental_local_simulator.ipynb  Using_the_new_local_simulator.ipynb  Using_the_tensor_network_simulator_TN1.ipynb  Verbatim_Compilation.ipynb  ankaa3_noise_from_06-30-2025.json  bell.qasm  create_custom_circuit_and_custom_local_simulator.ipynb  create_custom_local_simulator.ipynb  monkey_patching_circuit.ipynb  phase_estimation.py  translations.py  utils_circuit.py  utils_qaoa.py
examples/device_emulator/: README.md  ahs_utils.py  device_emulation_aquila_Z2_no_julia.ipynb  device_emulation_aquila_bell.ipynb  device_emulation_aquila_bell_no_julia.ipynb  device_emulation_aquila_bell_with_julia.ipynb  device_emulation_iqm_ghz.ipynb
examples/error_mitigation/: Error_Mitigation_with_IonQ.ipynb
examples/getting_started/: 1_Running_quantum_circuits_on_simulators.ipynb  2_Running_quantum_circuits_on_QPU_devices.ipynb  (+2 more)
extra/: environment-mitiq.yml  requirements-mitiq.txt
getting_started/: 1_Running_quantum_circuits_on_simulators.ipynb  2_Running_quantum_circuits_on_QPU_devices.ipynb  3_Deep_dive_into_the_anatomy_of_quantum_circuits.ipynb  4_Superdense_coding.ipynb  5_Quantum_Teleportation.ipynb  6_Understanding_Qubits_and_Quantum_Gates.ipynb  Creating_circuits_with_Amazon_Braket_SDK.ipynb  Getting_different_returned_results_and_getting_task_information.ipynb  Submitting_and_monitoring_tasks.ipynb
hybrid_quantum_algorithms/: VQE_Transverse_Ising_Model.ipynb
nbi/: buildspec.yml  buildspec_temp.yml  codebuild_build.sh
pennylane/: 0_Getting_started.ipynb  2_Graph_optimization_with_QAOA.ipynb
pennylane_braket/: 0_Getting_started.ipynb  3_Quantum_chemistry_with_VQE.ipynb
quantum_annealing/: D-Wave_anatomy.html  D-Wave_anatomy.ipynb  Dwave_GraphPartitioning.html  Dwave_GraphPartitioning.ipynb  Dwave_MaximumCut.html  Dwave_MaximumCut.ipynb  Dwave_MinimumVertexCoverProblem.html  Dwave_MinimumVertexCoverProblem.ipynb  Running_large_problems_using_QBSolv.ipynb
simple_circuits_algorithms/: device_logs-20200716204912.txt
(+1071 files in other folders)
